Remove the section on setting up environment variables.